Resolve table horizontal scroll issue

--- a/intelligent_remote_academia-frontend/src/index.css
+++ b/intelligent_remote_academia-frontend/src/index.css
@@ -20,3 +20,7 @@ code {
 p#diaryTitle-helper-text {
   margin: 5px 0;
 }
+
+main {
+  overflow: hidden;
+}
